scss/style.scss
/* ... */
.was-validated textarea.form-control.ld-warning:invalid, 
textarea.form-control.is-invalid.ld-warning {
    background-position: top calc(0.375em + 0.1875rem) right calc(0.875em + 0.3875rem);
}

.release-version {
    padding: 0.675rem 1rem !important;

    &:active,
    &:hover,
    &:focus {
        text-decoration: none;
    } 
}

.braille {
    font-size: 3rem;
    letter-spacing: 2px;
    width: 100%;
    color: var(--convrtr-base-color);
    line-height: 1.2;
}

.forerunner {
    font-family: 'TerminalGlyphs';
    font-size: 3rem;
    letter-spacing: 8px;
    width: 100%;
    color: var(--convrtr-base-color);
}
.fr-glyph {
    font-family: 'TerminalGlyphs';
    width: 3rem;
    height: 3rem;
    font-size: 1.75rem;
    line-height: 1;
}

.covenant {
    font-family: 'Covenant';
    font-size: 4rem;
    letter-spacing: 0px;
    width: 100%;
    color: var(--convrtr-base-color);
    line-height: 1.2;
}
.cov-glyph {
    font-family: 'Covenant';
    width: 3rem;
    height: 3rem;
    font-size: 2.5rem;
    line-height: 1;
    font-weight: normal;
}

.changelog {
    h1,h2 {
        padding-bottom: 0.75rem;
        margin-bottom: 1.25rem;
    }
    h1,h2 {
        padding-bottom: 0.75rem;
        margin-bottom: 1rem;
        border-bottom-color: var(--bs-border-color-translucent);
        border-style: none;
        border-bottom-style: solid;
        border-bottom-width: var(--bs-border-width);
    }
    @for $i from 1 through 6 {
        h#{$i} {
            font-weight: 300;
        }
    }
    h3 {
        @extend .h4 !optional;
        font-weight: 400;
    }
    h4 {@extend .h5 !optional;
        font-weight: 400;
    }
    article img {
        height: auto;
        max-width: 100%;
        @media (min-width: map-get($grid-breakpoints, md)) {
            max-width: 95%;
        }
        @media (min-width: map-get($grid-breakpoints, lg)) {
            max-width: 85%;
        }
        @media (min-width: map-get($grid-breakpoints, xl)) {
            max-width: 75%;
        }
    }
    a > img {
        max-width: 100%;
        padding: 0.5rem;
        outline-width: 3px;
        outline-style: solid;
        outline-color: var(--convrtr-bg-color);
        transition: outline-color ease 0.3s;

        &:hover,
        &:active,
        &:focus {
            outline-color: var(--convrtr-bg-color-75)
        }
    }
    code {
        --bs-bg-opacity: 0.1;
        --bs-border-opacity: 0.1;
        display: inline-flex !important;
        border-radius: var(--bs-border-radius) !important;
        background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
        border: var(--bs-border-width) var(--bs-border-style) var(--bs-border-color) !important;
        border-color: rgba(var(--bs-success-rgb), var(--bs-border-opacity)) !important;
        padding-right: .5rem !important;
        padding-left: .5rem !important;
        color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
        background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
        font-size: 0.875em;
        color: var(--bs-code-color);
        word-wrap: break-word;
        font-family: var(--bs-font-monospace);
    }
}
.version-list {
    >:not(caption)>*>* {
        border-bottom-width: 0;
        @media (min-width: map-get($grid-breakpoints, md)) {
            padding: 1rem;
            border-bottom-width: var(--bs-border-width);
        }
    }

    tbody tr {
        display: grid;
        @media (min-width: map-get($grid-breakpoints, md)) {
            display: table-row;
        }
        td:last-child {
            @media (max-width: map-get($grid-breakpoints, md)) {
                border-bottom-width: var(--bs-border-width);
            }
        }
    }
}

.git-badge {
    color: var(--bs-black);
    background-color: var(--bs-light-rgb);
    position: relative;
    z-index: 3;
    padding: 0.35rem 0.85rem;
}
.badge {
    &-improvements {
        color: var(--bs-primary-text-emphasis);
        background-color: var(--bs-primary-bg-subtle);
    }
    &-a11y {
        color: var(--bs-info-text-emphasis);
        background-color: var(--bs-info-bg-subtle);
    }
    &-bug-fixes {
        color: var(--bs-danger-text-emphasis);
        background-color: var(--bs-danger-bg-subtle);
    }
    &-bug {
        color: var(--bs-white);
        background-color: var(--bs-danger);
    }
    &-documentation {
        color: var(--bs-white);
        background-color: var(--bs-primary);
    }
    &-duplicate {
        color: var(--bs-black);
        background-color: $gray-400;
    }
    &-feature-request {
        color: var(--bs-black);
        background-color: $indigo-200;
    }
    &-hotfix {
        color: var(--bs-black);
        background-color: var(--bs-warning);
    }
    &-major {
        color: var(--bs-white);
        background-color: var(--convrtr-bg-color);
    }
    &-minor {
        color: var(--convrtr-txt-color);
        background-color: $gray-200;
        border: 1px solid var(--convrtr-bg-color-25);
    }
    &-new-features {
        color: var(--bs-success-text-emphasis);
        background-color: var(--bs-success-bg-subtle);
    }
    &-patch {
        color: var(--convrtr-link-color);
        background-color: var(--bs-white);
        border: 1px solid var(--convrtr-bg-color-25);
    }
    &-question {
        color: var(--bs-white);
        background-color: var(--bs-black);
    }
    &-release {
        color: var(--bs-white);
        background-color: #008672;
    }
    &-security {
        color: var(--bs-white);
        background-color: $purple;
    }
    &-wontfix {
        color: var(--bs-white);
        background-color: $pink-600;
    }
}

